Cleaned add new player dialog.